# stock_predictor

./: LICENSE  README.md  pyproject.toml
src/stock_predictor/: crew.py  main.py
src/stock_predictor/config/: agents.yaml  tasks.yaml
src/stock_predictor/frontend/: index.html
src/stock_predictor/tools/: __init__.py  bedrock_llm.py  custom_tool.py  llm_predict_tool.py
